--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>huanshen-common</module>
         <module>huanshen-security</module>
         <module>huanshen-service</module>
+        <module>huanshen-config</module>
     </modules>
 
     <properties>
@@ -55,7 +56,7 @@
             </dependency>
             <dependency>
                 <groupId>com.huanshen.scaffolding</groupId>
-                <artifactId>huanshen-general</artifactId>
+                <artifactId>huanshen-config</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
