--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,11 @@
                 <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
                 <version>3.5.2</version>
             </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>4.9.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
